
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct vgasr_priv {int * debugfs_root; int * switch_file; } ;


 int debugfs_remove (int *) ;

__attribute__((used)) static void vga_switcheroo_debugfs_fini(struct vgasr_priv *priv)
{
 if (priv->switch_file) {
  debugfs_remove(priv->switch_file);
  priv->switch_file = ((void*)0);
 }
 if (priv->debugfs_root) {
  debugfs_remove(priv->debugfs_root);
  priv->debugfs_root = ((void*)0);
 }
}
